[project]
name = "als-xrd-12-3-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.8",
    "natsort>=8.4.0",
    "netcdf4>=1.7.4",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pybaselines>=1.2.1",
    "pyfai[gui]>=2025.12.1",
    "scipy>=1.17.0",
    "tqdm>=4.67.1",
    "xarray>=2026.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
